tmp
f@http-server: cargo build --features async_tokio
   Compiling httpageboy v1.0.12 (/datos/code/numano/eqeqo/bazoj/http-server)
error[E0308]: mismatched types
   --> src/core/request.rs:381:19
    |
381 |       return Some((rh.handler)(self));
    |              ---- ^^^^^^^^^^^^^^^^^^ expected `Response`, found `Pin<Box<...>>`
    |              |
    |              arguments to this enum variant are incorrect
    |
    = note: expected struct `Response`
               found struct `Pin<Box<(dyn Future<Output = Response> + Send + 'static)>>`
help: the type constructed contains `Pin<Box<(dyn Future<Output = Response> + Send + 'static)>>` due to the type of the argument passed
   --> src/core/request.rs:381:14
    |
381 |       return Some((rh.handler)(self));
    |              ^^^^^------------------^
    |                   |
    |                   this argument influences the type of `Some`
note: tuple variant defined here
   --> /home/f/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:580:5
    |
580 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^

error[E0308]: mismatched types
   --> src/core/request.rs:395:23
    |
395 |           return Some((rh.handler)(self));
    |                  ---- ^^^^^^^^^^^^^^^^^^ expected `Response`, found `Pin<Box<...>>`
    |                  |
    |                  arguments to this enum variant are incorrect
    |
    = note: expected struct `Response`
               found struct `Pin<Box<(dyn Future<Output = Response> + Send + 'static)>>`
help: the type constructed contains `Pin<Box<(dyn Future<Output = Response> + Send + 'static)>>` due to the type of the argument passed
   --> src/core/request.rs:395:18
    |
395 |           return Some((rh.handler)(self));
    |                  ^^^^^------------------^
    |                       |
    |                       this argument influences the type of `Some`
note: tuple variant defined here
   --> /home/f/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:580:5
    |
580 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^

error[E0308]: mismatched types
  --> src/runtime/async/tokio.rs:41:53
   |
41 |       .insert((rt, path.to_string()), Rh { handler: rh });
   |                                                     ^^ expected `Pin<Box<...>>`, found `Response`
   |
   = note: expected fn pointer `for<'a> fn(&'a request::Request) -> Pin<Box<(dyn Future<Output = Response> + Send + 'static)>>`
              found fn pointer `for<'a> fn(&'a request::Request) -> Response`
